Change pip to install to user

--- a/devops/actions/run-tests/benchmark/action.yml
+++ b/devops/actions/run-tests/benchmark/action.yml
@@ -90,10 +90,7 @@ runs:
       echo "-----"
       sycl-ls
       echo "-----"
-      sudo apt install -y --ignore-missing python3-venv
-      python3 -m venv .venv
-      . .venv/bin/activate
-      pip install -r ./devops/scripts/benchmarks/requirements.txt
+      pip install --user -r ./devops/scripts/benchmarks/requirements.txt
       taskset -c "$CORES" ./devops/scripts/benchmarks/main.py "$(realpath ./llvm_test_workdir)" --sycl ./toolchain --save baseline
       echo "-----"
       ls
