[CI] Fix output directory used

--- a/devops/actions/run-tests/benchmark/action.yml
+++ b/devops/actions/run-tests/benchmark/action.yml
@@ -97,7 +97,7 @@ runs:
         --save baseline \
         --output-html remote \
         --results-dir "./llvm-ci-perf-results/$RUNNER_NAME" \
-        --output-dir ./llvm_test_workdir \
+        --output-dir "./llvm-ci-perf-results/$RUNNER_NAME" \
         --preset Minimal
       echo "-----"
       ls
