--- a/.github/workflows/ur-precommit.yml
+++ b/.github/workflows/ur-precommit.yml
@@ -39,26 +39,26 @@ concurrency:
 permissions: read-all
 
 jobs:
-  detect_changes:
-    name: Detect Changes
-    uses: ./.github/workflows/sycl-detect-changes.yml
+  # detect_changes:
+  #   name: Detect Changes
+  #   uses: ./.github/workflows/sycl-detect-changes.yml
 
-  source_checks:
-    name: Source Checks
-    needs: [detect_changes]
-    #if: ${{ always() && !cancelled() && contains(needs.detect_changes.outputs.filters, 'ur') }}
-    uses: ./.github/workflows/ur-source-checks.yml
+  # source_checks:
+  #   name: Source Checks
+  #   needs: [detect_changes]
+  #   #if: ${{ always() && !cancelled() && contains(needs.detect_changes.outputs.filters, 'ur') }}
+  #   uses: ./.github/workflows/ur-source-checks.yml
 
   adapters:
     name: Adapters
-    needs: [detect_changes, source_checks]
+    #needs: [detect_changes, source_checks]
     #if: ${{ always() && !cancelled() && contains(needs.detect_changes.outputs.filters, 'ur') }}
     strategy:
       matrix:
        include:
          - name: L0
            adapter_name: L0
-           runner: '["UR_L0"]'
+           runner: ubuntu
            image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
            target_devices: level_zero:gpu;opencl:gpu;opencl:cpu
            reset_intel_gpu: true
