--- a/.github/workflows/ur-precommit.yml
+++ b/.github/workflows/ur-precommit.yml
@@ -53,7 +53,7 @@ jobs:
            target_devices: level_zero:gpu;opencl:gpu;opencl:cpu
            reset_intel_gpu: true
            extra_lit_opts: --param gpu-intel-gen12=True
-           image: ghcr.io/intel/llvm/ubuntu2204_build:latest
+           image: ubuntu-latest
     
         # Extra native CPU jobs are here to force the loader to be used.
         # UR will not use the loader if there is only one target.
