--- a/.github/workflows/ur-precommit.yml
+++ b/.github/workflows/ur-precommit.yml
@@ -48,12 +48,12 @@ jobs:
        include:
          - name: L0
            adapter_name: L0
-           runner: ubuntu-latest
+           runner: ubuntu-24.04
            image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
            target_devices: level_zero:gpu;opencl:gpu;opencl:cpu
            reset_intel_gpu: true
            extra_lit_opts: --param gpu-intel-gen12=True
-           image: ubuntu-latest
+           image: ubuntu
     
         # Extra native CPU jobs are here to force the loader to be used.
         # UR will not use the loader if there is only one target.
