--- a/.github/workflows/sycl-linux-precommit.yml
+++ b/.github/workflows/sycl-linux-precommit.yml
@@ -1,187 +1,187 @@
-name: SYCL Pre Commit on Linux
+# name: SYCL Pre Commit on Linux
 
-on:
-  # We rely on "Fork pull request workflows from outside collaborators" -
-  # "Require approval for all outside collaborators" at
-  # https://github.com/intel/llvm/settings/actions for security.
-  pull_request:
-    branches:
-    - sycl
-    - sycl-rel-**
-    # Do not run builds if changes are only in the following locations
-    paths-ignore:
-    - '.github/ISSUE_TEMPLATE/**'
-    - '.github/CODEOWNERS'
-    - 'sycl/doc/**'
-    - 'sycl/gdb/**'
-    - 'clang/docs/**'
-    - '**.md'
-    - '**.rst'
-    - '.github/workflows/sycl-windows-*.yml'
-    - '.github/workflows/sycl-macos-*.yml'
-    - '.github/workflows/sycl-nightly.yml'
-    - '.github/workflows/sycl-rel-nightly.yml'
-    - 'devops/containers/**'
-    - 'devops/actions/build_container/**'
+# on:
+#   # We rely on "Fork pull request workflows from outside collaborators" -
+#   # "Require approval for all outside collaborators" at
+#   # https://github.com/intel/llvm/settings/actions for security.
+#   pull_request:
+#     branches:
+#     - sycl
+#     - sycl-rel-**
+#     # Do not run builds if changes are only in the following locations
+#     paths-ignore:
+#     - '.github/ISSUE_TEMPLATE/**'
+#     - '.github/CODEOWNERS'
+#     - 'sycl/doc/**'
+#     - 'sycl/gdb/**'
+#     - 'clang/docs/**'
+#     - '**.md'
+#     - '**.rst'
+#     - '.github/workflows/sycl-windows-*.yml'
+#     - '.github/workflows/sycl-macos-*.yml'
+#     - '.github/workflows/sycl-nightly.yml'
+#     - '.github/workflows/sycl-rel-nightly.yml'
+#     - 'devops/containers/**'
+#     - 'devops/actions/build_container/**'
 
-concurrency:
-  #  Cancel a currently running workflow from the same PR, branch or tag.
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
+# concurrency:
+#   #  Cancel a currently running workflow from the same PR, branch or tag.
+#   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+#   cancel-in-progress: true
 
-permissions: read-all
+# permissions: read-all
 
-jobs:
-  detect_changes:
-    uses: ./.github/workflows/sycl-detect-changes.yml
+# jobs:
+#   detect_changes:
+#     uses: ./.github/workflows/sycl-detect-changes.yml
 
-  build:
-    needs: [detect_changes]
-    if: always() && success()
-    uses: ./.github/workflows/sycl-linux-build.yml
-    with:
-      build_ref: ${{ github.sha }}
-      build_cache_root: "/__w/"
-      build_artifact_suffix: "default"
-      build_cache_suffix: "default"
-      # Docker image has last nightly pre-installed and added to the PATH
-      build_image: "ghcr.io/intel/llvm/sycl_ubuntu2404_nightly:latest"
-      cc: clang
-      cxx: clang++
-      changes: ${{ needs.detect_changes.outputs.filters }}
-      e2e_binaries_artifact: sycl_e2e_bin_default
+#   build:
+#     needs: [detect_changes]
+#     if: always() && success()
+#     uses: ./.github/workflows/sycl-linux-build.yml
+#     with:
+#       build_ref: ${{ github.sha }}
+#       build_cache_root: "/__w/"
+#       build_artifact_suffix: "default"
+#       build_cache_suffix: "default"
+#       # Docker image has last nightly pre-installed and added to the PATH
+#       build_image: "ghcr.io/intel/llvm/sycl_ubuntu2404_nightly:latest"
+#       cc: clang
+#       cxx: clang++
+#       changes: ${{ needs.detect_changes.outputs.filters }}
+#       e2e_binaries_artifact: sycl_e2e_bin_default
 
-  run_prebuilt_e2e_tests:
-    needs: [build, detect_changes]
-    if: ${{ always() && !cancelled() && needs.build.outputs.build_conclusion == 'success' }}
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - name: GEN 12 Integrated
-            runner: '["Linux", "gen12"]'
-            image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
-            target_devices: level_zero:gpu;opencl:gpu;opencl:cpu
-            reset_intel_gpu: true
-            extra_lit_opts: --param gpu-intel-gen12=True
-          - name: NVIDIA/CUDA
-            runner: '["Linux", "cuda"]'
-            image_options: -u 1001 --gpus all --cap-add SYS_ADMIN
-            target_devices: cuda:gpu
-          - name: AMD/HIP
-            runner: '["Linux", "amdgpu"]'
-            image_options: -u 1001 --device=/dev/dri --device=/dev/kfd
-            target_devices: hip:gpu
-            reset_intel_gpu: false
-          - name: Intel Arc A-Series Graphics
-            runner: '["Linux", "arc"]'
-            image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
-            target_devices: level_zero:gpu;opencl:gpu
-            reset_intel_gpu: true
-            extra_lit_opts: --param matrix-xmx8=True
-          - name: E2E tests with dev igc on Intel Arc A-Series Graphics
-            runner: '["Linux", "arc"]'
-            image: ghcr.io/intel/llvm/ubuntu2404_intel_drivers:devigc
-            image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
-            target_devices: level_zero:gpu;opencl:gpu
-            reset_intel_gpu: true
-            extra_lit_opts: --param matrix-xmx8=True
-            use_igc_dev: true
-          - name: E2E tests on Intel Ponte Vecchio GPU
-            runner: '["Linux", "pvc"]'
-            image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
-            target_devices: level_zero:gpu;opencl:gpu
-            reset_intel_gpu: true
-            extra_lit_opts: -j 50
-          - name: Dev IGC on Intel Ponte Vecchio GPU
-            runner: '["Linux", "pvc"]'
-            image: ghcr.io/intel/llvm/ubuntu2404_intel_drivers:devigc
-            image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
-            target_devices: level_zero:gpu;opencl:gpu
-            reset_intel_gpu: true
-            use_igc_dev: true
-            extra_lit_opts: -j 50
-          - name: Intel Battlemage Graphics
-            runner: '["Linux", "bmg"]'
-            image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
-            target_devices: level_zero:gpu
-            # The new Xe kernel driver used by BMG doesn't support resetting.
-            reset_intel_gpu: false
-          - name: SPIR-V Backend / Intel Battlemage Graphics
-            runner: '["Linux", "bmg"]'
-            image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
-            target_devices: level_zero:gpu;opencl:gpu;opencl:cpu
-            reset_intel_gpu: false
-            extra_lit_opts: --param spirv-backend=True
-            e2e_binaries_artifact: sycl_e2e_bin_default_spirv_backend
-    uses: ./.github/workflows/sycl-linux-run-tests.yml
-    with:
-      name: ${{ matrix.name }}
-      runner: ${{ matrix.runner }}
-      image: ${{ matrix.image }}
-      image_options: ${{ matrix.image_options }}
-      target_devices: ${{ matrix.target_devices }}
-      extra_lit_opts: ${{ matrix.extra_lit_opts }}
-      reset_intel_gpu: ${{ matrix.reset_intel_gpu }}
-      repo_ref: ${{ github.sha }}
-      sycl_toolchain_artifact: sycl_linux_default
-      sycl_toolchain_archive: ${{ needs.build.outputs.artifact_archive_name }}
-      sycl_toolchain_decompress_command: ${{ needs.build.outputs.artifact_decompress_command }}
-      e2e_binaries_artifact: ${{ matrix.e2e_binaries_artifact || 'sycl_e2e_bin_default' }}
-      e2e_testing_mode: 'run-only'
+#   run_prebuilt_e2e_tests:
+#     needs: [build, detect_changes]
+#     if: ${{ always() && !cancelled() && needs.build.outputs.build_conclusion == 'success' }}
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         include:
+#           - name: GEN 12 Integrated
+#             runner: '["Linux", "gen12"]'
+#             image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
+#             target_devices: level_zero:gpu;opencl:gpu;opencl:cpu
+#             reset_intel_gpu: true
+#             extra_lit_opts: --param gpu-intel-gen12=True
+#           - name: NVIDIA/CUDA
+#             runner: '["Linux", "cuda"]'
+#             image_options: -u 1001 --gpus all --cap-add SYS_ADMIN
+#             target_devices: cuda:gpu
+#           - name: AMD/HIP
+#             runner: '["Linux", "amdgpu"]'
+#             image_options: -u 1001 --device=/dev/dri --device=/dev/kfd
+#             target_devices: hip:gpu
+#             reset_intel_gpu: false
+#           - name: Intel Arc A-Series Graphics
+#             runner: '["Linux", "arc"]'
+#             image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
+#             target_devices: level_zero:gpu;opencl:gpu
+#             reset_intel_gpu: true
+#             extra_lit_opts: --param matrix-xmx8=True
+#           - name: E2E tests with dev igc on Intel Arc A-Series Graphics
+#             runner: '["Linux", "arc"]'
+#             image: ghcr.io/intel/llvm/ubuntu2404_intel_drivers:devigc
+#             image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
+#             target_devices: level_zero:gpu;opencl:gpu
+#             reset_intel_gpu: true
+#             extra_lit_opts: --param matrix-xmx8=True
+#             use_igc_dev: true
+#           - name: E2E tests on Intel Ponte Vecchio GPU
+#             runner: '["Linux", "pvc"]'
+#             image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
+#             target_devices: level_zero:gpu;opencl:gpu
+#             reset_intel_gpu: true
+#             extra_lit_opts: -j 50
+#           - name: Dev IGC on Intel Ponte Vecchio GPU
+#             runner: '["Linux", "pvc"]'
+#             image: ghcr.io/intel/llvm/ubuntu2404_intel_drivers:devigc
+#             image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
+#             target_devices: level_zero:gpu;opencl:gpu
+#             reset_intel_gpu: true
+#             use_igc_dev: true
+#             extra_lit_opts: -j 50
+#           - name: Intel Battlemage Graphics
+#             runner: '["Linux", "bmg"]'
+#             image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
+#             target_devices: level_zero:gpu
+#             # The new Xe kernel driver used by BMG doesn't support resetting.
+#             reset_intel_gpu: false
+#           - name: SPIR-V Backend / Intel Battlemage Graphics
+#             runner: '["Linux", "bmg"]'
+#             image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
+#             target_devices: level_zero:gpu;opencl:gpu;opencl:cpu
+#             reset_intel_gpu: false
+#             extra_lit_opts: --param spirv-backend=True
+#             e2e_binaries_artifact: sycl_e2e_bin_default_spirv_backend
+#     uses: ./.github/workflows/sycl-linux-run-tests.yml
+#     with:
+#       name: ${{ matrix.name }}
+#       runner: ${{ matrix.runner }}
+#       image: ${{ matrix.image }}
+#       image_options: ${{ matrix.image_options }}
+#       target_devices: ${{ matrix.target_devices }}
+#       extra_lit_opts: ${{ matrix.extra_lit_opts }}
+#       reset_intel_gpu: ${{ matrix.reset_intel_gpu }}
+#       repo_ref: ${{ github.sha }}
+#       sycl_toolchain_artifact: sycl_linux_default
+#       sycl_toolchain_archive: ${{ needs.build.outputs.artifact_archive_name }}
+#       sycl_toolchain_decompress_command: ${{ needs.build.outputs.artifact_decompress_command }}
+#       e2e_binaries_artifact: ${{ matrix.e2e_binaries_artifact || 'sycl_e2e_bin_default' }}
+#       e2e_testing_mode: 'run-only'
 
-      # Do not install drivers on AMD and CUDA runners.
-      install_igc_driver: >-
-        ${{ !contains(matrix.target_devices, 'cuda') &&
-        !contains(matrix.target_devices, 'hip') &&
-        contains(needs.detect_changes.outputs.filters, 'drivers') }}
-      install_dev_igc_driver: >-
-        ${{ !contains(matrix.target_devices, 'cuda') &&
-        !contains(matrix.target_devices, 'hip') &&
-        matrix.use_igc_dev &&
-        (contains(needs.detect_changes.outputs.filters, 'devigccfg') || contains(needs.detect_changes.outputs.filters, 'drivers')) ||
-        'false' }}
-      # Run only if the PR does not have the 'ci-no-devigc' label.
-      skip_run: ${{matrix.use_igc_dev && contains(github.event.pull_request.labels.*.name, 'ci-no-devigc') || 'false'}}
+#       # Do not install drivers on AMD and CUDA runners.
+#       install_igc_driver: >-
+#         ${{ !contains(matrix.target_devices, 'cuda') &&
+#         !contains(matrix.target_devices, 'hip') &&
+#         contains(needs.detect_changes.outputs.filters, 'drivers') }}
+#       install_dev_igc_driver: >-
+#         ${{ !contains(matrix.target_devices, 'cuda') &&
+#         !contains(matrix.target_devices, 'hip') &&
+#         matrix.use_igc_dev &&
+#         (contains(needs.detect_changes.outputs.filters, 'devigccfg') || contains(needs.detect_changes.outputs.filters, 'drivers')) ||
+#         'false' }}
+#       # Run only if the PR does not have the 'ci-no-devigc' label.
+#       skip_run: ${{matrix.use_igc_dev && contains(github.event.pull_request.labels.*.name, 'ci-no-devigc') || 'false'}}
 
-  test-perf:
-    needs: [build, detect_changes]
-    if: |
-      always() && !cancelled()
-      && needs.build.outputs.build_conclusion == 'success'
-      && (contains(github.event.pull_request.labels.*.name, 'run-perf-tests')
-          || contains(needs.detect_changes.outputs.filters, 'perf-tests'))
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - name: Intel GEN12 Graphics system
-            runner: '["Linux", "gen12"]'
-            image_extra_opts: --device=/dev/dri
-            reset_intel_gpu: true
-          - name: Intel Arc A-Series Graphics system
-            runner: '["Linux", "arc"]'
-            image_extra_opts: --device=/dev/dri
-            reset_intel_gpu: true
-          - name: AMD system
-            runner: '["Linux", "amdgpu"]'
-            image_extra_opts: --device=/dev/dri --device=/dev/kfd
-          - name: CUDA system
-            runner: '["Linux", "cuda"]'
-            image_extra_opts: --gpus all
-    uses: ./.github/workflows/sycl-linux-run-tests.yml
-    with:
-      name: Perf tests on ${{ matrix.name }}
-      runner: ${{ matrix. runner }}
-      image_options: -u 1001 --privileged --cap-add SYS_ADMIN ${{ matrix.image_extra_opts }}
-      target_devices: all
-      reset_intel_gpu: ${{ matrix.reset_intel_gpu }}
+#   test-perf:
+#     needs: [build, detect_changes]
+#     if: |
+#       always() && !cancelled()
+#       && needs.build.outputs.build_conclusion == 'success'
+#       && (contains(github.event.pull_request.labels.*.name, 'run-perf-tests')
+#           || contains(needs.detect_changes.outputs.filters, 'perf-tests'))
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         include:
+#           - name: Intel GEN12 Graphics system
+#             runner: '["Linux", "gen12"]'
+#             image_extra_opts: --device=/dev/dri
+#             reset_intel_gpu: true
+#           - name: Intel Arc A-Series Graphics system
+#             runner: '["Linux", "arc"]'
+#             image_extra_opts: --device=/dev/dri
+#             reset_intel_gpu: true
+#           - name: AMD system
+#             runner: '["Linux", "amdgpu"]'
+#             image_extra_opts: --device=/dev/dri --device=/dev/kfd
+#           - name: CUDA system
+#             runner: '["Linux", "cuda"]'
+#             image_extra_opts: --gpus all
+#     uses: ./.github/workflows/sycl-linux-run-tests.yml
+#     with:
+#       name: Perf tests on ${{ matrix.name }}
+#       runner: ${{ matrix. runner }}
+#       image_options: -u 1001 --privileged --cap-add SYS_ADMIN ${{ matrix.image_extra_opts }}
+#       target_devices: all
+#       reset_intel_gpu: ${{ matrix.reset_intel_gpu }}
 
-      env: '{"LIT_FILTER":"PerformanceTests/"}'
-      extra_lit_opts: -a -j 1 --param enable-perf-tests=True
+#       env: '{"LIT_FILTER":"PerformanceTests/"}'
+#       extra_lit_opts: -a -j 1 --param enable-perf-tests=True
 
-      repo_ref: ${{ github.sha }}
+#       repo_ref: ${{ github.sha }}
 
-      sycl_toolchain_artifact: sycl_linux_default
-      sycl_toolchain_archive: ${{ needs.build.outputs.artifact_archive_name }}
-      sycl_toolchain_decompress_command: ${{ needs.build.outputs.artifact_decompress_command }}
+#       sycl_toolchain_artifact: sycl_linux_default
+#       sycl_toolchain_archive: ${{ needs.build.outputs.artifact_archive_name }}
+#       sycl_toolchain_decompress_command: ${{ needs.build.outputs.artifact_decompress_command }}
