[SYCL] Build L0 v2 adapter by default
L0 v2 adapter is expected to be shipped as part of 2025.2 release.

Refactor params to configure.py into a single 'choice' param.

--- a/.github/workflows/sycl-linux-build.yml
+++ b/.github/workflows/sycl-linux-build.yml
@@ -167,8 +167,7 @@ jobs:
           -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
           -DLLVM_INSTALL_UTILS=ON \
           -DNATIVECPU_USE_OCK=Off \
-          -DLLVM_EXPERIMENTAL_TARGETS_TO_BUILD=SPIRV \
-          --level_zero_v1_and_v2
+          -DLLVM_EXPERIMENTAL_TARGETS_TO_BUILD=SPIRV
     - name: Compile
       id: build
       run: cmake --build $GITHUB_WORKSPACE/build --target sycl-toolchain
