TEST CI build benchmarks

--- a/.github/workflows/sycl-containers-igc-dev.yaml
+++ b/.github/workflows/sycl-containers-igc-dev.yaml
@@ -20,7 +20,7 @@ permissions: read-all
 
 jobs:
   build_and_push_images:
-    if: github.repository == 'intel/llvm'
+    if: false
     name: Build and Push IGC Dev Docker Images
     runs-on: ubuntu-latest
     permissions:
