--- a/.github/workflows/sycl-linux-precommit.yml
+++ b/.github/workflows/sycl-linux-precommit.yml
@@ -33,6 +33,7 @@ permissions: read-all
 
 jobs:
   detect_changes:
+    if: false
     uses: ./.github/workflows/sycl-detect-changes.yml
 
   build:
