--- a/.github/workflows/ur-benchmarks-reusable.yml
+++ b/.github/workflows/ur-benchmarks-reusable.yml
@@ -1,32 +1,7 @@
 name: Benchmarks Reusable
 
 on:
-  workflow_call:
-    inputs:
-      str_name:
-        required: true
-        type: string
-      pr_no:
-        required: true
-        # even though this is a number, this is a workaround for issues with
-        # reusable workflow calls that result in "Unexpected value '0'" error.
-        type: string
-      bench_script_params:
-        required: false
-        type: string
-        default: ''
-      sycl_config_params:
-        required: false
-        type: string
-        default: ''
-      upload_report:
-        required: false
-        type: boolean
-        default: false
-      compute_runtime_commit:
-        required: false
-        type: string
-        default: ''
+  pull_request:
 
 permissions:
   contents: read
@@ -38,8 +13,8 @@ jobs:
     strategy:
       matrix:
         adapter: [
-          {str_name: "${{ inputs.str_name }}",
-          sycl_config: "${{ inputs.sycl_config_params }}"
+          {str_name: "level_zero",
+          sycl_config: ""
           }
         ]
         build_type: [Release]
@@ -48,37 +23,10 @@ jobs:
     runs-on: "PVC_PERF"
 
     steps:
-    - name: Add comment to PR
-      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-      if: ${{ always() && inputs.pr_no != 0 }}
-      with:
-        script: |
-          const pr_no = '${{ inputs.pr_no }}';
-          const adapter = '${{ matrix.adapter.str_name }}';
-          const url = '${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}';
-          const params = '${{ inputs.bench_script_params }}';
-          const body = `Compute Benchmarks ${adapter} run (with params: ${params}):\n${url}`;
-
-          github.rest.issues.createComment({
-            issue_number: pr_no,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: body
-          })
-
     - name: Checkout SYCL
       uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       with:
         path: sycl-repo
-
-    # We need to fetch special ref for proper PR's merge commit. Note, this ref may be absent if the PR is already merged.
-    - name: Fetch PR's merge commit
-      if: ${{ inputs.pr_no != 0 }}
-      working-directory: ${{github.workspace}}/sycl-repo
-      run: |
-        git fetch -- https://github.com/${{github.repository}} +refs/pull/${{ inputs.pr_no }}/*:refs/remotes/origin/pr/${{ inputs.pr_no }}/*
-        git checkout origin/pr/${{ inputs.pr_no }}/merge
-        git rev-parse origin/pr/${{ inputs.pr_no }}/merge
 
     # TODO: As long as we didn't merge this workflow into main, we should allow both scripts location
     - name: Establish bench scripts location
@@ -165,58 +113,3 @@ jobs:
         --compare baseline
         --compute-runtime ${{ inputs.compute_runtime_commit }}
         --build-igc
-        ${{ inputs.upload_report && '--output-html' || '' }}
-        ${{ inputs.pr_no != 0 && '--output-markdown' || '' }}
-        ${{ inputs.bench_script_params }}
-        # Temporarily disabled due to build faiures
-        # https://github.com/intel/llvm/actions/runs/13814877162/job/38645384849#step:14:849
-        # --ur ${{ github.workspace }}/ur_install
-
-    - name: Print benchmark results
-      run: |
-        cat ${{ github.workspace }}/benchmark_results.md || true
-
-    - name: Add comment to PR
-      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
-      if: ${{ always() && inputs.pr_no != 0 }}
-      with:
-        script: |
-          let markdown = ""
-          try {
-            const fs = require('fs');
-            markdown = fs.readFileSync('benchmark_results.md', 'utf8');
-          } catch(err) {
-          }
-
-          const pr_no = '${{ inputs.pr_no }}';
-          const adapter = '${{ matrix.adapter.str_name }}';
-          const url = '${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}';
-          const test_status = '${{ steps.benchmarks.outcome }}';
-          const job_status = '${{ job.status }}';
-          const params = '${{ inputs.bench_script_params }}';
-          const body = `Benchmarks ${adapter} run (${params}):\n${url}\nJob status: ${job_status}. Test status: ${test_status}.\n ${markdown}`;
-
-          github.rest.issues.createComment({
-            issue_number: pr_no,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: body
-          })
-
-    - name: Rename benchmark results file
-      if: ${{ always() && inputs.upload_report }}
-      run: mv benchmark_results.html benchmark_results_${{ inputs.pr_no }}.html
-
-    - name: Upload HTML report
-      if: ${{ always() && inputs.upload_report }}
-      uses: actions/cache/save@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
-      with:
-        path: benchmark_results_${{ inputs.pr_no }}.html
-        key: benchmark-results-${{ inputs.pr_no }}-${{ matrix.adapter.str_name }}-${{ github.run_id }}
-
-    # TODO: As long as we didn't merge this workflow into main, we should allow both scripts location
-    - name: Get information about platform
-      if: ${{ always() }}
-      run: |
-        ${{github.workspace}}/sycl-repo/devops/scripts/get_system_info.sh || true
-        ${{github.workspace}}/sycl-repo/unified-runtime/.github/scripts/get_system_info.sh || true
