--- a/.github/workflows/ur-precommit.yml
+++ b/.github/workflows/ur-precommit.yml
@@ -37,6 +37,7 @@ permissions: read-all
 
 jobs:
   detect_changes:
+    if: false
     name: Detect Changes
     uses: ./.github/workflows/sycl-detect-changes.yml
 
