--- a/.github/workflows/sycl-nightly.yml
+++ b/.github/workflows/sycl-nightly.yml
@@ -266,7 +266,7 @@ jobs:
             runner: '["PVC_PERF"]'
             image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
             target_devices: level_zero:gpu
-            reset_intel_gpu: false
+            reset_intel_gpu: true
     uses: ./.github/workflows/sycl-linux-run-tests.yml
     secrets: inherit
     with:
