[CI] Tune nightly benchmarking job for better reliability (#17122)
This PR tunes the nightly benchmarking job to produce more consistent
results:
- Lowers the tolerance threshold of benchmarking results accepted from
50% to 8%
  - Nightly was flaking before even with a 50% tolerance threshold
- Raises the iterations to 5000
- Using 10,000 iterations did not result in significantly more stable
performance, although this may change as we obtain more data
- However, the PVC benchmarking job in the overall nightly workflow now
takes about ~47 minutes, whereas before the PVC benchmarking job took
~14 minutes
- This should not have major impact on execution time however,
considering the E2E tests take ~42 minutes: Since both these jobs run in
parallel on different machines, the theoretical effect on the overall
workflow should only be about 5 minutes, although this would depend on
whether or not machines are able to be scheduled in time.
- Changes the benchmarking workflows in sycl-nightly.yml to use the
tuned PERF_PVC runner
- Untuned machines are exhibiting large variations when running
compute-benchmarks (20-25%, up to 50% in the worst case scenario): These
are unacceptable variations and not particularly useful.
- Disables nightly benchmarking on gen12:
- Gen12 machines are currently untuned. Similar to PVC machines, these
results are not accurate and not worth serious nightly benchmarking.
- Adds guards for benchmarking jobs to prevent benchmark runs in forks
https://github.com/intel/llvm/pull/14454#discussion_r1981183727

---------

Co-authored-by: Nick Sarnie <nick.sarnie@intel.com>

--- a/.github/workflows/sycl-linux-run-tests.yml
+++ b/.github/workflows/sycl-linux-run-tests.yml
@@ -126,6 +126,7 @@ on:
           - '["cts-cpu"]'
           - '["Linux", "build"]'
           - '["cuda"]'
+          - '["PVC_PERF"]'
       image:
         type: choice
         options:
@@ -170,17 +171,14 @@ on:
           Extra options to be added to LIT_OPTS.
         default: ''
 
-      install_igc_driver:
+      reset_intel_gpu:
+        description: |
+          Reset Intel GPUs
         type: choice
         options:
           - false
           - true
 
-      install_dev_igc_driver:
-        type: choice
-        options:
-          - false
-          - true
       e2e_testing_mode:
         type: choice
         options:
