--- a/.github/workflows/sycl-nightly.yml
+++ b/.github/workflows/sycl-nightly.yml
@@ -247,7 +247,7 @@ jobs:
       sycl_cts_artifact: sycl_cts_bin
 
   aggregate_benchmark_results:
-    if: always() && !cancelled()
+    if: github.repository == 'intel/llvm' && !cancelled()
     name: Aggregate benchmark results and produce historical averages
     uses: ./.github/workflows/sycl-benchmark-aggregate.yml
     secrets:
@@ -262,13 +262,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - name: Run compute-benchmarks on L0 Gen12
-            runner: '["Linux", "gen12"]'
-            image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
-            target_devices: level_zero:gpu
-            reset_intel_gpu: true
           - name: Run compute-benchmarks on L0 PVC
-            runner: '["Linux", "pvc"]'
+            runner: '["PVC_PERF"]'
             image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
             target_devices: level_zero:gpu
             reset_intel_gpu: true
